kubernetes/spring/spring-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-monitoring
  namespace: monitoring
spec:
  type: ExternalName
  externalName: spring.default.svc.cluster.local
