kubernetes/spring/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  selector:
    app: spring
  ports:
    - protocol: TCP
      port: 8080
