kubernetes/spring/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring
spec:
  rules:
    - host: spring.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring
                port:
                  number: 8080
